[project]
name = "instagram-comment-to-dm"
version = "0.1.0"
description = "Instagram comment-to-DM automation — triggers a private DM when a user comments a keyword on a post"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.3.0",
    "custom-python-logger>=2.0.0",
    "python-custom-exceptions>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
